<resources>
    <string name="app_name">Top Tasks</string>

    <!--  Status Task  -->
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feito</string>

    <!--  Fragment Splash  -->
    <string name="splash_fragment_description">Logo do aplicativo</string>

    <!--  Fragment Login  -->
    <string name="fragment_login_email_text">E-mail</string>
    <string name="fragment_login_email_hint">Digite seu e-mail</string>
    <string name="fragment_login_senha_text">Senha</string>
    <string name="fragment_login_senha_hint">Digite sua senha</string>
    <string name="fragment_login_btn_login_text">Login</string>
    <string name="fragment_login_criar_conta_text">Criar conta</string>
    <string name="fragment_login_recuperar_senha_text">Recuperar senha</string>
    <string name="fragment_login_warning_password">Digite sua senha</string>
    <string name="fragment_login_warning_email">Digite seu e-mail</string>

    <!--  Fragment Recover Account  -->
    <string name="fragment_recoverAccount_description">Informe seu e-mail cadastrado para receber o link de recuperação de senha</string>
    <string name="fragment_recoverAccount_email_text">E-mail</string>
    <string name="fragment_recoverAccount_email_hint">Digite seu e-mail</string>
    <string name="fragment_recoverAccount_btn_getLink">Receber link</string>
    <string name="fragment_recoverAccount_appBar_title">Recuperar Conta</string>
    <string name="fragment_recoverAccount_warning_email">Preencha seu email</string>

    <!--  Fragment Register  -->
    <string name="fragment_register_email_text">E-mail</string>
    <string name="fragment_register_email_hint">Digite seu e-mail</string>
    <string name="fragment_register_password_text">Senha</string>
    <string name="fragment_register_password_hint">Digite sua senha</string>
    <string name="fragment_register_btn_createAccount">Criar conta</string>
    <string name="fragment_register_appBar_title">Criar Conta</string>
    <string name="fragment_register_warning_password">Preencha uma senha</string>
    <string name="fragment_register_warning_email">Preencha um email válido</string>

    <!--  Fragment Home  -->
    <string name="fragment_home_btn_logout">Ícone do botão logout</string>

    <!--  Fragment FormTask  -->
    <string name="fragment_formTask_textView_descricao">Descrição</string>
    <string name="fragment_formTask_editText_criarTarefa">Criar nova atividade</string>
    <string name="fragment_formTask_text_statusTask">Status</string>
    <string name="fragment_formTask_radioBtn_todo">A Fazer</string>
    <string name="fragment_formTask_radioBtn_doing">Fazendo</string>
    <string name="fragment_formTask_radioBtn_done">Feito</string>
    <string name="fragment_formTask_btn_saveTask">Salvar</string>
    <string name="fragment_formTask_appBar_title">Nova Tarefa</string>
    <string name="fragment_formTask_warning_description">Preencha a descrição da atividade</string>

    <!--  Fragment Todo  -->
    <string name="fragment_FAB_contentDescription">Botão adicionar tarefa</string>

    <!--  Bottom Sheet  -->
    <string name="bottomSheet_title">Atenção</string>
    <string name="bottomSheet_button_text">Entendi</string>

    <!--  Item Task  -->
    <string name="itemTask_icBack_description">Ícone voltar atividade</string>
    <string name="itemTask_icForward_description">Ícone de avançar atividade</string>
    <string name="itemTask_btnDelete_text">Remover</string>
    <string name="itemTask_btnEdit_text">Editar</string>
    <string name="itemTask_btnDetails_text">Detalhes</string>
</resources>